2007-11-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Implemented completion context for
	  "SomeEnum e =". In this case the completion list will show the enum
	  name. Fixes bug #335142.

2007-11-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Include in the completion list the classes from parent
	  namespaces. Fixes bug #338394.

2007-11-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Improved completion of 'namespace'
	  keyword. Fixes bug #338392.

2007-11-01  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Restore IsAsResolve logic. Is/as are used for
	  downcasting, so it only makes sense to return subclasses of the provided
	  type.

2007-10-29  Michael Hutchinson  <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Don't try to look back past first 
	  char in buffer when checking whether to run completion code.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml: Bump MD version.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml: Track changes in the Icon extension node.

2007-10-26  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Avoid calling
	  expressionFinder.FindExpression on every keystroke, as it calls
	  FilterComments, which is very expensive (recorded 6% in statistical
	  profiling, the most time spent in any managed non-runtime method). It's
	  only called when the keystroke is completable -- not ideal, but an
	  improvement.

2007-10-25  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Removed GenerateDocComments' dependency
	  on indentEngine.

2007-10-25  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Minor optimisation.

2007-10-25  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Read context to end of line when